--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
     <title>Pokedex</title>
   </head>
   <body>
-      <script src="./scripts/index.js"></script>
+    <div class="test_wrap">
+      <div class="test a"></div>
+      <div class="test b"></div>
+      <div class="test c"></div>
+      <div class="test d"></div>
+      <div class="test e"></div>
+      <div class="test f"></div>
+      <div class="test g"></div>
+      <div class="test h"></div>
+      <div class="test i"></div>
+      <div class="test j"></div>
+      <div class="test k"></div>
+      <div class="test l"></div>
+      <div class="test m"></div>
+      <div class="test n"></div>
+      <div class="test o"></div>
+      <div class="test p"></div>
+      <div class="test q"></div>
+      <div class="test r"></div>
+    </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
