--- a/index.html
+++ b/index.html
@@ -14,6 +14,34 @@
     <title>Pokedex</title>
   </head>
   <body>
+    <div class="header__wrapper">
+      <header class="header">
+        <div class="pokeball-icon__wrapper">
+          <span class="pokeball-icon__container"
+            ><img
+              class="pokeball-icon"
+              src="./assets/icons/pokeball.svg"
+              alt="Pokeball"
+          /></span>
+        </div>
+        <div class="page-title__wrapper">
+          <h1 class="page-title">Pokedéx</h1>
+        </div>
+        <div class="sort">
+          <div class="sort-type__az">
+            <span class="letter__a">A</span>
+            <span class="letter__z">Z</span>
+          </div>
+            <div class="down-arrow-icon__container">
+            <img
+              class="down-arrow-icon"
+              src="./assets/icons/down_arrow.svg"
+              alt="Arrow pointing in down direction"
+            />
+            </div>
+        </div>
+      </header>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
