--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./assets/icons/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,15 +33,20 @@
             <span class="letter__a">A</span>
             <span class="letter__z">Z</span>
           </div>
-            <div class="down-arrow-icon__container">
+          <div class="down-arrow-icon__container">
             <img
               class="down-arrow-icon"
               src="./assets/icons/down_arrow.svg"
               alt="Arrow pointing in down direction"
             />
-            </div>
+          </div>
         </div>
       </header>
+    </div>
+    <div class="form__wrapper">
+      <form class="form">
+        <input class="input-search" type="text" name="search" id="search" placeholder="Search" />
+      </form>
     </div>
     <script src="./scripts/index.js"></script>
   </body>
