Minor changes in css. Added magnifying glass icon in input.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
         <div class="sort">
           <div class="sort-type__az">
-            <span class="letter__a">A</span>
-            <span class="letter__z">Z</span>
+            <span class="letter__a flex-vCenter-hCenter">A</span>
+            <span class="letter__z flex-vCenter-hCenter">Z</span>
           </div>
           <div class="down-arrow-icon__container">
             <img
@@ -45,7 +45,7 @@
     </div>
     <div class="form__wrapper">
       <form class="form">
-        <input class="input-search" type="text" name="search" id="search" placeholder="Search" />
+        <input class="input-search" type="text" name="search" id="search" placeholder="Search..." />
       </form>
     </div>
     <script src="./scripts/index.js"></script>
