--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Pokedex</title>
   </head>
   <body>
-    <div class="header__wrapper">
+    <section class="header__wrapper">
       <header class="header">
         <div class="pokeball-icon__wrapper">
           <span class="pokeball-icon__container"
@@ -42,12 +42,29 @@
           </div>
         </div>
       </header>
-    </div>
-    <div class="form__wrapper">
+    </section>
+    <section class="form__wrapper">
       <form class="form">
-        <input class="input-search" type="text" name="search" id="search" placeholder="Search..." />
+        <input
+          class="input-search"
+          type="text"
+          name="search"
+          id="search"
+          placeholder="Search..."
+        />
       </form>
-    </div>
+    </section>
+    <main>
+      <section class="pokemon-cards__wrapper">
+        <!-- The pokemon card template below is made just so i can code it in script. It will be removed. -->
+        <div class="pokemon-card">
+          <div class="pokemon-card__header"></div>
+          <div class="pokemon-card__sprite flex-vCenter-hCenter"></div>
+          <div class="pokemon-card__pokemon-name"></div>
+        </div>
+        <!-- --------------------------------------------------------------------------------------------- -->
+      </section>
+    </main>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
