Added styles variants for diffrent pokemon types.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="pokemon-cards__wrapper">
         <!-- The pokemon card template below is made just so i can code it in script. It will be removed. -->
         <div class="pokemon-card">
-          <div class="pokemon-card__header"></div>
+          <div class="pokemon-card__header pokemon-card__header--psychic"></div>
           <div class="pokemon-card__sprite flex-vCenter-hCenter"></div>
           <div class="pokemon-card__pokemon-name"></div>
         </div>
