--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           id="search"
           placeholder="Search..."
         />
+        <button class="button-search"></button>
       </form>
     </section>
     <main>
