Defining class for pokemon cards.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           id="search"
           placeholder="Search..."
         />
-        <button class="button-search"></button>
+        <button class="button-search" type="button"></button>
       </form>
     </section>
     <main>
