Created function that prevents page reload when 'enter' is pressed.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </header>
     </section>
     <section class="form__wrapper">
-      <form class="form">
+      <form id="form-search" class="form">
         <input
           class="input-search"
           type="text"
