--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </div>
       </header>
     </section>
+    <input id="test" type="text">
+    <span class="fortest"></span>
     <section class="form__wrapper">
       <form id="form-search" class="form">
         <input
