--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
         </div>
       </header>
     </section>
-    <input id="test" type="text">
-    <span class="fortest"></span>
     <section class="form__wrapper">
-      <form id="form-search" class="form">
+      <form id="form-search" class="form" onsubmit="return false">
         <input
           class="input-search"
           type="text"
@@ -54,7 +52,7 @@
           id="search"
           placeholder="Search..."
         />
-        <button class="button-search" type="button"></button>
+        <button class="button-search" type="submit"></button>
       </form>
     </section>
     <main>
