Added error handler. If there is no query in input there will be 12 random pokemons searched.

--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
       </header>
     </section>
     <section class="form__wrapper">
+      <!-- onsubmit attribute is used to prevent page reloading on mobile when 'enter' on mobile keyboard is pressed -->
       <form id="form-search" class="form" onsubmit="return false">
         <input
           class="input-search"
           type="text"
           name="search"
           id="search"
-          placeholder="Search..."
+          placeholder="Catch 'em all!"
         />
         <button class="button-search" type="submit"></button>
       </form>
